# AgenticCodeReviewer

./: README.md  config.yaml  main.py  pyproject.toml  requirements.txt  service.py
src/reviewer/: cli.py  reviewer.py
tests/: test_reviewer.py
